--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -7,7 +7,7 @@
 
 /* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
+    font-family: Arial, 'Times New Roman', Times, serif;
     line-height: 1.6;
 }
 
@@ -43,13 +43,13 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    transition: background-color 0.3s; 
 }
 
-/* Cambio de color al pasar el cursor */
-nav ul li:hover a {
-    background-color: rgba(0, 17, 253, 0.582); 
+
+nav ul li a:hover {
+    color: #ffcc00; 
 }
+
 
 .logo {
     width: 60px; 
