--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -26,18 +26,19 @@ header {
 }
 
 nav {
-    margin-left: 75%; 
+    margin-left: 60%; 
+    
 }
 
 nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    width: 120%;
+    width: 150%;
 }
 nav ul li {
     display: inline;
-    margin-right: auto;
+    margin-right: 1%;
 }
 
 nav ul li a {
@@ -48,7 +49,6 @@ nav ul li a {
 
 nav ul li a:hover {
     color: #ffcc00; 
-    border: 1px solid #ffcc00;
     padding:  3%;
 }
 
@@ -60,6 +60,43 @@ nav ul li a:hover {
     border-radius: 50%;
 }
 
+button{
+    background:rgba(0, 0, 0, 0.526);
+    color:#ffffff;
+    border:none;
+    position:relative;
+    height:25px;
+    font-size:1em;
+    padding:0 2em;
+    cursor:pointer;
+    transition:800ms ease all;
+    outline:none;
+    list-style-type: none;
+  }
+  button:hover{
+    background:#7c47d2;
+    color:#000000;
+  }
+  button:before,button:after{
+    content:'';
+    position:absolute;
+    top:0;
+    right:0;
+    height:2px;
+    width:0;
+    background: #111a77;
+    transition:400ms ease all;
+  }
+  button:after{
+    right:inherit;
+    top:inherit;
+    left:0;
+    bottom:0;
+  }
+  button:hover:before,button:hover:after{
+    width: 50%;
+    transition:800ms ease all;
+  }
 
 /* Contenido principal */
 main {
@@ -67,20 +104,18 @@ main {
     position: relative; 
     background-color: gray;
     border-radius: 20px;
-    padding: 4%;
-    padding-top: 8%;
+    padding-top: 6%;
+    
 }
 
 section {
-    margin-bottom: 20px;
+    margin-bottom: 4%;
+
 }
 
 h1 {
     font-size: 48px;
-    background-image: url('imgs/agujero.webp'); 
-    background-position: center;
-    background-clip: text; 
-    color: transparent; 
+    color: white; 
     text-align: center;
 }
 
@@ -98,6 +133,9 @@ footer {
     display: flex; 
     justify-content: center;
     color: white;
+    background-image: url("imgs/fondo_portada.png");
+    background-size: cover;
+
 }
 
 .rocket {
