--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -13,7 +13,7 @@ body {
 
 /* Encabezado */
 header {
-    background-image: url('imgs/fondo_encabezado.jpg'); 
+    background-color: #000000;
     background-size: cover;
     color: #fff;
     padding: 10px 20px;
@@ -102,19 +102,36 @@ button{
 main {
     padding-top: 80px; 
     position: relative; 
-    background-color: gray;
-    border-radius: 20px;
+    background-color: rgb(0, 0, 0);
     padding-top: 6%;
-    
+    color: white;
+    padding-bottom: 3%;
 }
 
 section {
     margin-bottom: 4%;
 
 }
+.section2 {
+    display: flex; 
+}
+.section2 p {
+    margin: 20px; 
+}
+
+.column {
+    flex: 1; 
+    padding: 10px; 
+}
+
+.imagen-columna {
+    max-width: 100%; 
+    height: auto; 
+    
+}
 
 h1 {
-    font-size: 48px;
+    font-size: 60px;
     color: white; 
     text-align: center;
 }
@@ -133,9 +150,11 @@ footer {
     display: flex; 
     justify-content: center;
     color: white;
-    background-image: url("imgs/fondo_portada.png");
+    background-image: url("imgs/fondo_main.webp");
     background-size: cover;
-
+    height: 600px;
+    text-align: center;
+    align-items: center;
 }
 
 .rocket {
@@ -143,8 +162,8 @@ footer {
     margin-left: 1%;
     margin-right: 1%;
     transform: translateY(-50%); 
-    width: 45px; 
-    height: auto; 
+    width: 40px; 
+    height: 40px; 
     animation: moveRocket 5s infinite linear; 
 }
 
