--- a/M4/SpaceWars/tienda.css
+++ b/M4/SpaceWars/tienda.css
@@ -141,7 +141,7 @@ section {
 
 
 h1 {
-    font-size: 130px;
+    font-size: 140px;
     color: white; 
     text-align: center;
     font-family: 'FuenteTitulo', sans-serif;
@@ -160,44 +160,15 @@ footer {
 
 .title {
     display: flex; 
+    justify-content: center;
     color: white;
     background-image: url("imgs/fondo_main.webp");
     background-size: cover;
     height: 600px;
+    text-align: center;
     align-items: center;
 }
 
-.rocket {
-    margin-top: -9%;
-    margin-left: 9%;
-    margin-right: 9%;
-    transform: translateY(-50%); 
-    width: 70px; 
-    height: 70px; 
-    animation: moveRocket 5s infinite linear; 
-}
-.rocket1 {
-    margin-top: 23%;
-    margin-left: 9%;
-    margin-right: 9%;
-    transform: translateY(-50%); 
-    width: 70px; 
-    height: 70px; 
-    animation: moveRocket 5s infinite linear; 
-}
-
-
-@keyframes moveRocket {
-    0% {
-        transform: translateY(-50%) rotate(0);
-    }
-    50% {
-        transform: translateY(-50%) rotate(180deg);
-    }
-    100% {
-        transform: translateY(-50%) rotate(360deg);
-    }
-}
 
 
 /* Animación */
@@ -217,5 +188,52 @@ footer {
 
 @font-face {
     font-family: 'FuenteTitulo';
-    src: url('imgs/ka1.ttf') format('truetype');
+    src: url('imgs/KrinkesDecorPERSONAL.ttf') format('truetype');
+}
+
+#tienda {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 80px 20px; /* Padding superior para evitar que el header tape el contenido */
+}
+
+.product-card {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    overflow: hidden;
+    width: 250px;
+    transition: transform 0.2s;
+}
+
+.product-card:hover {
+    transform: scale(1.05);
+}
+
+.product-image {
+    width: 100%;
+    height: auto;
+}
+
+.product-info {
+    padding: 15px;
+    text-align: center;
+}
+
+.product-title {
+    font-size: 1.5em;
+    margin: 10px 0;
+}
+
+.product-price {
+    color: #007bff;
+    font-size: 1.2em;
+    margin: 10px 0;
+}
+
+.product-description {
+    color: #666;
+    font-size: 0.9em;
 }
