--- a/M4/style.css
+++ b/M4/style.css
@@ -26,6 +26,9 @@ body {
 
 form {
     display: flex;
+    width: 20%;
+    height: 39px;
+    margin-top: 23px;
 }
 
 .search-input {
@@ -58,11 +61,11 @@ form {
     margin-left: 20px;
 }
 
-.social-icon {
-    color: #007BFF;
-    margin-left: 10px;
-    font-size: 24px;
-    text-decoration: none;
+.social-icons {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+    width: 20%;
 }
 
 .social-icon:hover {
@@ -76,41 +79,45 @@ form {
 
 .navbar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: unset; */
+    /* align-items: center; */
     background-color: rgba(0, 0, 0, 0.5);
-    /* padding: 000 12px; */
-    margin: -34px -13px;
+    /* padding: 0px 12px; */
+    /* margin: -34px -13px; */
+    /* height: 77px; */
 }
+
 .nav {
-    width: 40%;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
+    /* align-items: center; */
     padding: 20px 50px;
     background-color: rgba(0, 0, 0, 0.5);
+    text-align: left;
 }
 
 .log {
-    width: 20%;
+    width: 30%;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
-    padding: 20px 50px;
-    background-color: rgba(0, 0, 0, 0.5);
+    padding: 27px 69px;
+    /* background-color: rgba(0, 0, 0, 0.5); */
 }
 
 .logo {
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 25%;
 }
 
 .logo img {
-    height: 97px;
+    height: 89px;
     margin-right: 10px;
-    width: 146px;
-    height: 124px;
+    width: 101px;
+    margin: 0px -9px;
+    padding: 0px 0px;
 }
 
 .nav-links {
