--- a/M4/SpaceWars/about.css
+++ b/M4/SpaceWars/about.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -9,55 +8,53 @@
 body {
     font-family: Arial, 'Times New Roman', Times, serif;
     line-height: 1.6;
+    background-color: #000000; /* Fondo negro */
+    color: #fff; /* Texto blanco */
+    margin: 0 20px; /* Margen a los lados */
 }
 
 /* Encabezado */
 header {
-    background-image: url('imgs/fondo_encabezado.jpg'); 
-    background-size: cover;
+    background-color: #000000;
     color: #fff;
     padding: 10px 20px;
-    position: fixed;
-    width: 100%;
+    position: sticky;
     top: 0;
     z-index: 999;
     display: flex;
     align-items: center;
-}
-
-nav {
-    margin-left: auto; 
+    justify-content: space-between;
 }
 
 nav ul {
     list-style-type: none;
+    display: flex;
     margin: 0;
     padding: 0;
 }
 
 nav ul li {
-    display: inline;
     margin-right: 20px;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    padding: 10px 15px;
+    display: block;
 }
 
-
 nav ul li a:hover {
+    background-color: #444;
     color: #ffcc00; 
 }
 
-
 .logo {
-    width: 60px; 
-    height: auto; 
-    margin-right: 20px; 
+    width: 60px;
+    height: auto;
+    margin-right: 20px;
     border-radius: 50%;
 }
-
 
 /* Contenido principal */
 main {
@@ -65,64 +62,46 @@ main {
     position: relative; 
 }
 
-section {
+.title {
+    text-align: center;
+    margin-bottom: 40px;
+    background-image: url('imgs/fondo_encabezado.jpg'); 
+    background-size: cover;
+    padding: 20px;
+    font-size: 2.5em; 
+}
+
+.team-member {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-between; 
+    margin-bottom: 40px;
+}
+
+.member-box {
+    background-color: #444444;
+    padding: 20px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    width: 30%;
+    height: 50%; 
     margin-bottom: 20px;
 }
 
-/* Título de la página */
-h1 {
-    text-align: center; 
-    font-size: 3em; 
+.member-image {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
+    margin-bottom: 20px; 
 }
 
-/* Pie de página */
 footer {
-    background: radial-gradient(circle, #000000 10%, transparent 60%), #000000;
+    background: #000000;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
     bottom: 0;
     width: 100%;
-}
-
-.title {
-    display: flex; 
-    justify-content: center;
-}
-
-.rocket {
-    margin-top: 3%;
-    margin-left: 1%;
-    margin-right: 1%;
-    transform: translateY(-50%); 
-    width: 45px; 
-    height: auto; 
-    animation: moveRocket 5s infinite linear; 
-}
-
-@keyframes moveRocket {
-    0% {
-        transform: translateY(-50%) rotate(0);
-    }
-    50% {
-        transform: translateY(-50%) rotate(180deg);
-    }
-    100% {
-        transform: translateY(-50%) rotate(360deg);
-    }
-}
-
-
-/* Animación */
-#principal {
-    animation: fadeIn ease 3s;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
