--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -22,7 +22,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
+
 
 nav ul {
     list-style-type: none;
@@ -32,14 +34,20 @@ nav ul {
 }
 
 nav ul li {
-    margin-right: 20px;
+    margin-right: 5px; 
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 10px 15px;
+    padding: 5px 9px; 
     display: block;
+    font-size: 0.9em; 
+}
+
+nav ul li a:hover {
+    background-color: #444;
+    color: #ffcc00; 
 }
 
 nav ul li a:hover {
@@ -199,4 +207,13 @@ footer {
 @font-face {
     font-family: 'FuenteTitulo';
     src: url('imgs/ka1.ttf') format('truetype');
+}
+
+@media screen and (max-width: 768px) {
+    .rocket, .rocket1 {
+        display: none;
+    }
+    h1 {
+        font-size: 50px;
+    }
 }
