--- a/M4/SpaceWars/tutorial.css
+++ b/M4/SpaceWars/tutorial.css
@@ -1,14 +1,14 @@
-
+/* Estilos generales */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Estilos generales */
 body {
     font-family: Arial, 'Times New Roman', Times, serif;
     line-height: 1.6;
+    background-color: #f4f4f4;
 }
 
 /* Encabezado */
@@ -22,7 +22,9 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    
 }
+
 
 nav ul {
     list-style-type: none;
@@ -48,6 +50,11 @@ nav ul li a:hover {
     color: #ffcc00; 
 }
 
+nav ul li a:hover {
+    background-color: #444;
+    color: #ffcc00; 
+}
+
 .logo {
     width: 65px;
     height: auto;
@@ -55,71 +62,79 @@ nav ul li a:hover {
     border-radius: 50%;
 }
 
-
-/* Contenido principal */
-main {
-    padding-top: 80px; 
-    position: relative; 
+/* Título del tutorial */
+.title {
+    background-image: url('imgs/fondo_main.webp');
+    background-size: cover;
+    color: white;
+    text-align: center;
+    padding: 50px 0;
 }
 
-section {
+.title h1 {
+    font-size: 3em;
+}
+
+/* Sección de opciones */
+.options {
+    padding: 20px;
+    background-color: #333;
+    color: white;
+    text-align: center;
+}
+
+.options h2 {
     margin-bottom: 20px;
 }
 
-/* Título de la página */
-h1 {
-    text-align: center; 
-    font-size: 3em; 
+.options ul {
+    list-style-type: none;
+}
+
+.options ul li {
+    margin-bottom: 10px;
+}
+
+.options ul li a {
+    color: #ffcc00;
+    text-decoration: none;
+    font-size: 1.2em;
+}
+
+.options ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Contenido del tutorial */
+.tutorial-content {
+    padding: 20px;
+}
+
+.tutorial-content h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.tutorial-box {
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.tutorial-box h3 {
+    margin-bottom: 10px;
+}
+
+.tutorial-box p {
+    color: #333;
 }
 
 /* Pie de página */
 footer {
-    background: radial-gradient(circle, #000000 10%, transparent 60%), #000000;
+    background-color: #000000;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
-    bottom: 0;
-    width: 100%;
-}
-
-.title {
-    display: flex; 
-    justify-content: center;
-}
-
-.rocket {
-    margin-top: 3%;
-    margin-left: 1%;
-    margin-right: 1%;
-    transform: translateY(-50%); 
-    width: 45px; 
-    height: auto; 
-    animation: moveRocket 5s infinite linear; 
-}
-
-@keyframes moveRocket {
-    0% {
-        transform: translateY(-50%) rotate(0);
-    }
-    50% {
-        transform: translateY(-50%) rotate(180deg);
-    }
-    100% {
-        transform: translateY(-50%) rotate(360deg);
-    }
-}
-
-
-/* Animación */
-#principal {
-    animation: fadeIn ease 3s;
-}
-
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
 }
