--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +8,8 @@
 body {
     font-family: Arial, 'Times New Roman', Times, serif;
     line-height: 1.6;
+    overflow-y: scroll; 
+    height: 100vh; 
 }
 
 /* Encabezado */
@@ -22,9 +23,7 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
 }
-
 
 nav ul {
     list-style-type: none;
@@ -50,11 +49,6 @@ nav ul li a:hover {
     color: #ffcc00; 
 }
 
-nav ul li a:hover {
-    background-color: #444;
-    color: #ffcc00; 
-}
-
 .logo {
     width: 65px;
     height: auto;
@@ -62,34 +56,39 @@ nav ul li a:hover {
     border-radius: 50%;
 }
 
-
 /* Contenido principal */
 main {
-    padding-top: 25px; 
-    position: relative; 
+    padding-top: 0px; 
     background-color: rgb(0, 0, 0);
     color: white;
-    padding-bottom: 3%;
+    padding-bottom: 2%;
+    min-height: calc(100vh - 60px); 
 }
 
 section {
     margin-bottom: 4%;
-
 }
+
 .section2 {
     display: flex; 
+    gap: 20px;
 }
+
 .section2 p {
     margin: 20px; 
 }
 
 .column {
     flex: 1; 
-    padding: 10px; 
+    padding: 20px; 
+    background-color: #1a1a1a;
+    border: 1px solid #333;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .izquierda {
-    flex: 2; 
+    flex: 1.5; 
 }
 
 .derecha {
@@ -99,8 +98,8 @@ section {
 .imagen-columna {
     max-width: 100%; 
     height: auto; 
-
 }
+
 #github-button {
     text-align: center;
     margin: 20px 0;
@@ -128,13 +127,11 @@ section {
     margin-right: 10px;
 }
 
-
 h1 {
     font-size: 130px;
     color: white; 
     text-align: center;
     font-family: 'FuenteTitulo', sans-serif;
-
 }
 
 /* Pie de página */
@@ -150,7 +147,7 @@ footer {
 .title {
     display: flex; 
     color: white;
-    background-image: url("imgs/fondo_main.webp");
+    background-image: url("imgs/fondo_encabezado.jpg");
     background-size: cover;
     height: 600px;
     align-items: center;
@@ -165,6 +162,7 @@ footer {
     height: 70px; 
     animation: moveRocket 5s infinite linear; 
 }
+
 .rocket1 {
     margin-top: 23%;
     margin-left: 9%;
@@ -174,7 +172,6 @@ footer {
     height: 70px; 
     animation: moveRocket 5s infinite linear; 
 }
-
 
 @keyframes moveRocket {
     0% {
@@ -187,7 +184,6 @@ footer {
         transform: translateY(-50%) rotate(360deg);
     }
 }
-
 
 /* Animación */
 #principal {
@@ -202,7 +198,6 @@ footer {
         opacity: 1;
     }
 }
-
 
 @font-face {
     font-family: 'FuenteTitulo';
