--- a/M4/SpaceWars/tienda.css
+++ b/M4/SpaceWars/tienda.css
@@ -66,7 +66,7 @@ main {
     justify-content: center;
     align-items: center;
     color: white;
-    background-image: url("imgs/fondo_main.webp");
+    background-image: url("imgs/fondo_encabezado.jpg");
     background-size: cover;
     height: 200px;
     text-align: center;
