--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -57,6 +57,32 @@ nav ul li a:hover {
 }
 
 /* Contenido principal */
+.logo-container {
+    text-align: center;
+    margin-bottom: 20px; 
+}
+
+.menu {
+    text-align: center;
+}
+
+.menu li {
+    margin-right: 5px; 
+}
+
+.menu li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 9px; 
+    display: block;
+    font-size: 0.9em; 
+}
+
+.menu li a:hover {
+    background-color: #444;
+    color: #ffcc00; 
+}
+
 main {
     padding-top: 0px; 
     background-color: rgb(0, 0, 0);
@@ -64,6 +90,7 @@ main {
     padding-bottom: 2%;
     min-height: calc(100vh - 60px); 
 }
+
 
 section {
     margin-bottom: 4%;
@@ -210,5 +237,18 @@ footer {
     }
     h1 {
         font-size: 50px;
+    }
+    .logo-container {
+        margin-bottom: 0; 
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu li {
+        margin: 5px 0; 
     }
 }
