--- a/M4/SpaceWars/tienda.css
+++ b/M4/SpaceWars/tienda.css
@@ -11,6 +11,32 @@ body {
 }
 
 /* Encabezado */
+.logo-container {
+    text-align: center;
+    margin-bottom: 20px; 
+}
+
+.menu {
+    text-align: center;
+}
+
+.menu li {
+    margin-right: 5px; 
+}
+
+.menu li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 9px; 
+    display: block;
+    font-size: 0.9em; 
+}
+
+.menu li a:hover {
+    background-color: #444;
+    color: #ffcc00; 
+}
+
 header {
     background-color: #000000;
     color: #fff;
@@ -174,4 +200,20 @@ footer {
 @font-face {
     font-family: 'MiFuente';
     src: url('imgs/KrinkesDecorPERSONAL.ttf') format('truetype');
+}
+
+@media screen and (max-width: 768px) {
+    .logo-container {
+        margin-bottom: 0; 
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .menu li {
+        margin: 5px 0; 
+    }
 }
