--- a/M4/SpaceWars/tutorial.css
+++ b/M4/SpaceWars/tutorial.css
@@ -151,11 +151,12 @@ nav ul li a:hover {
     display: flex;
     align-items: center;
     max-width: 800px; 
+    position: relative; /* Añadido */
 }
 
 .tutorial-image {
     width: 50%; 
-    height: 40%; 
+    height: auto; 
     border-radius: 10px;
     margin-right: 20px;
 }
@@ -175,11 +176,35 @@ nav ul li a:hover {
 
 /* Pie de página */
 footer {
-    background-color: #000000;
+    background: #000000;
     color: #fff;
     padding: 10px 20px;
     text-align: center;
+    bottom: 0;
+    width: 100%;
+    margin-top: auto;
 }
+
+.hover-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.tutorial-box:hover .hover-image {
+    opacity: 1;
+}
+
+.hover-image {
+    width: 30%; 
+    height: auto; 
+    top: 50%; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+}
+
 
 @media screen and (max-width: 768px) {
     .tutorial-box {
