--- a/M4/SpaceWars/principal.css
+++ b/M4/SpaceWars/principal.css
@@ -123,8 +123,8 @@ section {
 }
 
 .imagen-columna {
-    max-width: 100%; 
-    height: auto; 
+    width: 100%; 
+    height: 90%; 
 }
 
 #github-button {
